# latencyReducer

./: .dockerignore  .gitignore  README.md  docker-compose.yml
analysis/: plots.ipynb  webrtc_stats.csv
open-cv-practice/: CMakeLists.txt  main.cpp
sender/: dependencies.md  pipeline.md  sender.py
server/: CMakeLists.txt  Dockerfile
server/cpp/: CMakeLists.txt
server/cpp/include/: server.h
server/cpp/src/: main.cpp  server.cpp
server/include/: server.h  socket.h
server/src/: main.cpp  server.cpp
webclient/: client.js  statistics.js  styles.css  viewer.html
